--- a/frontend/pages/template-profile.html
+++ b/frontend/pages/template-profile.html
@@ -183,7 +183,7 @@
         >
           <img src="../assets/cat.jpg" alt="" />
           <p style="font-weight: 600; font-size: x-large">%correo%</p>
-          <p style="height: fit-content">%nomreUsuario%</p>
+          <p style="height: fit-content">%nombreUsuario%</p>
         </div>
 
         <div class="profile-stats">
