--- a/frontend/pages/template-subir.html
+++ b/frontend/pages/template-subir.html
@@ -193,7 +193,7 @@
       Detalles del libro
     </p>
 
-    <form id="form-libro">
+    <form id="form-libro" action="/agregar" method="POST" enctype="multipart/form-data">
       <div class="portada">
         <div class="campo-imagen">
           <p>Agregar portada</p>
@@ -220,7 +220,7 @@
         </div>
         <div class="campo">
           <p>Genero</p>
-          <select name="genero" id="">
+          <select name="categoria" id="">
             <option value="terror">terror</option>
             <option value="educativo">educativo</option>
             <option value="accion">accion</option>
@@ -241,37 +241,41 @@
           <p>Etiquetas</p>
           <input name="etiquetas" type="text" />
         </div>
+        <div class="campo">
+          <p>Libro</p>
+          <input name="libro" type="file" />
+        </div>
         <button type="submit">Guardar</button>
       </div>
     </form>
   </body>
 
   <script>
-    const form = document.getElementById("form-libro");
+    // const form = document.getElementById("form-libro");
 
-    // const fileInput = document.getElementById("portada");
-    // const file = fileInput.files[0];
+    // // const fileInput = document.getElementById("portada");
+    // // const file = fileInput.files[0];
 
-    form.addEventListener("submit", async (e) => {
-      console.log("evennto");
-      e.preventDefault();
+    // form.addEventListener("submit", async (e) => {
+    //   console.log("evennto");
+    //   e.preventDefault();
 
-      const data = {
-        titulo: form.titulo.value,
-        autor: form.autor.value,
-        fechaPublicacion: form.fechaPublicacion.value,
-        noPaginas: form.noPaginas.value,
-        genero: form.genero.value,
-        sinopsis: form.sinopsis.value,
-        etiquetas: form.etiquetas.value.split(" ").map((etiqueta) => etiqueta.trim()),
-      };
-      const response = await fetch("/agregar", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify(data),
-      });
-    });
+    //   const data = {
+    //     titulo: form.titulo.value,
+    //     autor: form.autor.value,
+    //     fechaPublicacion: form.fechaPublicacion.value,
+    //     noPaginas: form.noPaginas.value,
+    //     genero: form.genero.value,
+    //     sinopsis: form.sinopsis.value,
+    //     etiquetas: form.etiquetas.value.split(" ").map((etiqueta) => etiqueta.trim()),
+    //   };
+    //   const response = await fetch("/agregar", {
+    //     method: "POST",
+    //     headers: {
+    //       "Content-Type": "application/json",
+    //     },
+    //     body: JSON.stringify(data),
+    //   });
+    // });
   </script>
 </html>
