--- a/frontend/pages/template-subir.html
+++ b/frontend/pages/template-subir.html
@@ -230,8 +230,12 @@
           </select>
         </div>
         <div class="campo">
-          <label for="noPaginas">Numero de páginas</label>
+          <label for="noPaginas">Número de páginas</label>
           <input type="text" name="noPaginas" id="" />
+        </div>
+        <div class="campo">
+          <label for="capitulos">Número de capítulos</label>
+          <input type="text" name="capitulos" id="" />
         </div>
         <div class="campo">
           <p>Fecha de publicación</p>
