subido por (libro)

--- a/frontend/pages/libro-info.html
+++ b/frontend/pages/libro-info.html
@@ -152,7 +152,7 @@
           <div class="subio-sinopsis">
             <div class="perfil">
               <img src="/assets/cat.jpg" alt="" />
-              <p>%nombre%</p>
+              <p>@%nombre%</p>
             </div>
             <p class="texto">%sinopsis%</p>
           </div>
