--- a/frontend/pages/template-profile.html
+++ b/frontend/pages/template-profile.html
@@ -94,7 +94,7 @@
     }
 
     .sobre-mi {
-      padding: 0 20rem;
+      padding: 0 34rem;
       display: flex;
       flex-direction: column;
       gap: 1rem;
@@ -215,7 +215,7 @@
       </div>
     </div>
 
-    <div class="sobre-mi">
+    <div class="sobre-mi" style="">
       <div
         style="
           display: flex;
@@ -229,7 +229,7 @@
       </div>
 
       <div style="max-height: 10rem; overflow: hidden">
-        <p style="font-weight: 100">
+        <p style="font-weight: 100; max-width: 23rem;">
           %sobreMi%
         </p>
       </div>
