--- a/frontend/pages/template-profile.html
+++ b/frontend/pages/template-profile.html
@@ -196,7 +196,7 @@
               width: fit-content;
             "
           >
-            <p>12</p>
+            <p>%librosSubidos%</p>
             <p>Libros subidos</p>
           </div>
 
@@ -215,7 +215,7 @@
       </div>
     </div>
 
-    <div class="sobre-mi" style="">
+    <div class="sobre-mi">
       <div
         style="
           display: flex;
