--- a/frontend/pages/template-profile.html
+++ b/frontend/pages/template-profile.html
@@ -208,7 +208,7 @@
               align-items: center;
             "
           >
-            <p>32</p>
+            <p>%favoritos%</p>
             <p>Favoritos</p>
           </div>
         </div>
